DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2007-09-16 patrick  Removed polymorphism from vpr::BaseThread and vpr::Thread.
                    NEW VERSION: 2.1.7
2007-09-16 patrick  Added vpr::ThreadWin32::setRunOn() and
                    vpr::ThreadWin32::getRunOn(). Added Linux-specific
                    implementations of vpr::ThreadPosix::setRunOn() and
                    vpr::ThreadPosix::getRunOn(). Changed
                    vpr::Thread::getRunOn() so that it now returns
                    std::vector<unsigned int>.
                    NEW VERSION: 2.1.6
2007-09-06 patrick  Implemented stack trace printing on Mac OS X.
2007-09-04 patrick  Set VPR_BASE_DIR automatically on all platforms.
2007-08-21 patrick  Removed support for SPROC.
                    NEW VERSION: 2.1.5
2007-07-24 aronb    vpr::Library::findSymbol() throws vpr::LibraryException if
                    the library has not been loaded.
2007-07-08 patrick  Debug-enabled code linked against the release runtime on
                    Windows is now named the same as optimized code. The debug
                    DLLs are installed in the "debug" subdirectory.
                    vpr::LibraryLoader no longer looks for plug-ins with the
                    "_g" name variation by default.
                    NEW VERSION: 2.1.4
2007-06-26 patrick  Changed the preprocessor identification of debug versus
                    optimized to look for VPR_DEBUG or JUGGLER_DEBUG instead
                    of _DEBUG (and VPR_OPT or JUGGLER_OPT instead of _OPT).
                    NEW VERSION: 2.1.3
2007-06-26 patrick  Allow user-level code to customize the DSO name extension
                    used to distinguish between build variants through the
                    new function vpr::LibraryLoader::setDSONameExt().
                    NEW VERSION: 2.1.2
2007-05-23 patrick  Cleaned up internal handling of vpr::Interval objects in